@@ -1,3 +1,13 @@
+Tue Jun 20 18:16:52 MDT 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/preferences-page-spellcheck.c:
+	* src/fe-gnome/preferences-page-spellcheck.h:
+	* data/preferences-dialog.glade:
+	  - Move widget creation for the spell-checking preferences page into
+	    the code, in preparation for making the contents of the page
+	    dependent on whether or not enchant is installed with any
+	    dictionaries.
+
 Tue Jun 20 17:47:04 MDT 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* src/fe-gnome/main-window.c:
